// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Checkbox In Color Context 1`] = `
<div
  data-variant="tinted"
  data-color="accent"
>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      id="<removed>"
      type="checkbox"
      checked
      aria-describedby="<removed>"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      Checkbox label
    </label>
    <div
      data-field="description"
      id="<removed>"
    >
      Description
    </div>
  </ds-field>
</div>
`;

exports[`Focused 1`] = `
<ds-field data-clickdelegatefor="<removed>">
  <input
    id="<removed>"
    type="checkbox"
    value="value"
    aria-describedby="<removed>"
  >
  <label
    data-weight="regular"
    for="<removed>"
  >
    Checkbox label
  </label>
  <div
    data-field="description"
    id="<removed>"
  >
    Description
  </div>
</ds-field>
`;

exports[`One Option 1`] = `
<fieldset aria-labelledby="<removed>">
  <legend
    data-weight="medium"
    id="<removed>"
  >
    Bekreft at du er over 18 år
  </legend>
  <p
    data-variant="default"
    id="<removed>"
  >
    For at vi skal kunne sende deg opplysningen du ber om, må du bekrefte at du er myndig.
  </p>
  <ds-field data-clickdelegatefor="<removed>">
    <input
      type="checkbox"
      value="samtykke"
      id="<removed>"
    >
    <label
      data-weight="regular"
      for="<removed>"
    >
      Jeg bekrefter at jeg er over 18 år
    </label>
  </ds-field>
</fieldset>
`;

exports[`Preview 1`] = `
<ds-field data-clickdelegatefor="<removed>">
  <input
    id="<removed>"
    type="checkbox"
    value="value"
    aria-describedby="<removed>"
  >
  <label
    data-weight="regular"
    for="<removed>"
  >
    Checkbox label
  </label>
  <div
    data-field="description"
    id="<removed>"
  >
    Description
  </div>
</ds-field>
`;
